--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
 ﻿cmake_minimum_required(VERSION 3.14)
 project(MPSC_Project CXX)
 
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-
 
 if(CMAKE_BUILD_TYPE MATCHES "Release")
     set(DEFAULT_RELEASE_OPTS "$<$<CXX_COMPILER_ID:MSVC>:/O2 /Ob2>$<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-O3>")
@@ -22,47 +20,52 @@ FetchContent_MakeAvailable(googlebenchmark)
 
 find_package(Threads REQUIRED)
 
+# 通用编译选项定义
+set(COMMON_TARGET_PROPERTIES
+    PRIVATE
+        ${DEFAULT_RELEASE_OPTS}
+        $<$<CXX_COMPILER_ID:MSVC>:/EHsc>
+)
+
+# 基准测试可执行文件
 add_executable(mpsc_bench benchmarks/bench.cpp)
-
-target_include_directories(mpsc_bench PRIVATE 
-    ${CMAKE_CURRENT_SOURCE_DIR}/include
-    ${CMAKE_CURRENT_SOURCE_DIR} 
+target_include_directories(mpsc_bench 
+    PRIVATE 
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}
 )
-
-target_link_libraries(mpsc_bench PRIVATE 
-    benchmark::benchmark_main
-    Threads::Threads 
-    atomic
+target_link_libraries(mpsc_bench 
+    PRIVATE
+        benchmark::benchmark_main
+        Threads::Threads
+        $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:atomic>
 )
+target_compile_options(mpsc_bench ${COMMON_TARGET_PROPERTIES})
 
-target_compile_options(mpsc_bench PRIVATE ${DEFAULT_RELEASE_OPTS})
-
-
+# 日志系统示例
 add_executable(mpsc_log_example "examples/log_system.cpp")
-
-target_include_directories(mpsc_log_example PRIVATE 
-    ${CMAKE_CURRENT_SOURCE_DIR}/include
-    ${CMAKE_CURRENT_SOURCE_DIR}
+target_include_directories(mpsc_log_example 
+    PRIVATE 
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}
 )
-
-target_link_libraries(mpsc_log_example PRIVATE 
-    Threads::Threads 
-    atomic
+target_link_libraries(mpsc_log_example 
+    PRIVATE
+        Threads::Threads
+        $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:atomic>
 )
+target_compile_options(mpsc_log_example ${COMMON_TARGET_PROPERTIES})
 
-target_compile_options(mpsc_log_example PRIVATE ${DEFAULT_RELEASE_OPTS})
-
-
+# 命令分发器示例
 add_executable(mpsc_command_dispatcher examples/command_dispatcher.cpp)
-
-target_include_directories(mpsc_command_dispatcher PRIVATE 
-    ${CMAKE_CURRENT_SOURCE_DIR}/include
-    ${CMAKE_CURRENT_SOURCE_DIR}
+target_include_directories(mpsc_command_dispatcher 
+    PRIVATE 
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}
 )
-
-target_link_libraries(mpsc_command_dispatcher PRIVATE 
-    Threads::Threads 
-    atomic
+target_link_libraries(mpsc_command_dispatcher 
+    PRIVATE
+        Threads::Threads
+        $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:atomic>
 )
-
-target_compile_options(mpsc_command_dispatcher PRIVATE ${DEFAULT_RELEASE_OPTS})
+target_compile_options(mpsc_command_dispatcher ${COMMON_TARGET_PROPERTIES})
