--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,9 +17,9 @@ jobs:
           ignore_words_list: "mpsc,daking,hdr"
           skip: "./.git,./out,./build"
 
-  # Linux (x86_64 ARM64)
   build-linux:
     needs: spell-check
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -30,44 +30,45 @@ jobs:
           "linux-gcc-release", 
           "linux-clang-release"
         ]
-        include:
-          - arch: x64
-            os: ubuntu-latest
-          - arch: arm64
-            os: ubuntu-24.04-arm64
-    runs-on: ${{ matrix.os }}
-    
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Build Tools
+      - name: Set up QEMU
+        if: matrix.arch == 'arm64'
+        uses: docker/setup-qemu-action@v3
+
+      - name: [x64] Install Tools & Build
+        if: matrix.arch == 'x64'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y ninja-build clang g++
-
-      - name: Configure CMake
-        run: cmake --preset ${{ matrix.preset }}
-
-      - name: Build
-        run: cmake --build --preset ${{ matrix.preset }}
-
-      - name: Run Runtime Checks
-        shell: bash
-        env:
-          ASAN_OPTIONS: 'halt_on_error=1'
-          TSAN_OPTIONS: 'halt_on_error=1'
-        run: |
+          sudo apt-get update && sudo apt-get install -y ninja-build clang g++
+          cmake --preset ${{ matrix.preset }}
+          cmake --build --preset ${{ matrix.preset }}
           cd out/build/${{ matrix.preset }}
-          echo ">>> [${{ matrix.arch }}] Running Tests"
           ./mpsc_tests
-          
-          echo ">>> [${{ matrix.arch }}] Running Log System"
           ./mpsc_log_system_example
-          
-          echo ">>> [${{ matrix.arch }}] Running Command Dispatcher"
           ./mpsc_command_dispatcher_example
 
-  # MSVC (x86_64)
+      - name: [arm64] Build and Test in Container
+        if: matrix.arch == 'arm64'
+        run: |
+          # 我们使用 arm64 架构的 Ubuntu 镜像
+          docker run --rm --platform linux/arm64/v8 \
+            -v ${{ github.workspace }}:/src \
+            -w /src \
+            -e ASAN_OPTIONS='halt_on_error=1' \
+            -e TSAN_OPTIONS='halt_on_error=1' \
+            arm64v8/ubuntu:24.04 /bin/bash -c "
+              apt-get update && apt-get install -y ninja-build clang g++ cmake
+              cmake --preset ${{ matrix.preset }}
+              cmake --build --preset ${{ matrix.preset }}
+              cd out/build/${{ matrix.preset }}
+              echo '>>> Running ARM64 Tests'
+              ./mpsc_tests
+              ./mpsc_log_system_example
+              ./mpsc_command_dispatcher_example
+            "
+
   build-windows:
     needs: spell-check
     runs-on: windows-latest
