--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,7 @@ jobs:
         if: matrix.arch == 'arm64'
         uses: docker/setup-qemu-action@v3
 
-      - name: [x64] Install Tools & Build
+      - name: [x64] 
         if: matrix.arch == 'x64'
         run: |
           sudo apt-get update && sudo apt-get install -y ninja-build clang g++
@@ -49,7 +49,7 @@ jobs:
           ./mpsc_log_system_example
           ./mpsc_command_dispatcher_example
 
-      - name: [arm64] Build and Test in Container
+      - name: [arm64] 
         if: matrix.arch == 'arm64'
         run: |
           # 我们使用 arm64 架构的 Ubuntu 镜像
